--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                 <div class="site-heading">
-                    <h1></h1>
-                    <hr class="small">
+                    <h1>欢迎来到我的世界</h1>
+                   
                     <span class="subheading"></span>
                 </div>
             </div>
